--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      
     />
     <link
       rel="stylesheet"
@@ -18,7 +19,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,9 +31,55 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <div id="hour-09" class=" row time-div">
+          <div class="col-md-1 hour"><span id="9">9am</span></div>
+          <textarea class="col-mid-10 time-block description"></textarea>
+          <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+      </div>
+      <div id="hour-10" class=" row time-div">
+        <div class="col-md-1 hour"><span id="10">10am</span></div>
+        <textarea class="col-mid-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+    </div>
+    <div id="hour-11" class=" row time-div">
+        <div class="col-md-1 hour"><span id="11">11am</span></div>
+        <textarea class="col-mid-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+    </div>
+    <div id="hour-12" class=" row time-div">
+        <div class="col-md-1 hour"><span id="12">12pm</span></div>
+        <textarea class="col-mid-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+    </div>
+    <div id="hour-13" class=" row time-div">
+        <div class="col-md-1 hour"><span id="13">1pm</span></div>
+        <textarea class="col-mid-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+    </div>
+    <div id="hour-14" class=" row time-div">
+        <div class="col-md-1 hour"><span id="14">2pm</span></div>
+        <textarea class="col-mid-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+    </div>
+    <div id="hour-15" class=" row time-div">
+        <div class="col-md-1 hour"><span id="15">3pm</span></div>
+        <textarea class="col-mid-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+    </div>
+    <div id="hour-16" class=" row time-div">
+        <div class="col-md-1 hour"><span id="16">4pm</span></div>
+        <textarea class="col-mid-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+    </div>
+    <div id="hour-17" class=" row time-div">
+        <div class="col-md-1 hour"><span id="17">5pm</span></div>
+        <textarea class="col-mid-10 time-block description"></textarea>
+        <button class="col-md-1 saveBtn"><i class="fas fa-lock"></i></button>
+    </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="assets/index.js"></script>
   </body>
 </html>
