--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
+        <h1 class="display-3">Work Day Scheduler</h1>
+        <p id="currentDay" class="lead display-4"></p>
+        <button id="clearFieldsBtn" type="button" class="btn btn-secondary">Clear Fields</button>
+      </header>
+
+
+
     <div class="container">
       <!-- Timeblocks go here -->
       <div id="hour-09" class=" row time-div">
